--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "@ilgiroscopio/changesets-packages",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "build": "ncc build index.js"
+  },
   "dependencies": {
     "@actions/core": "^1.10.1"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.1"
   }
 }
